--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
             </div>
         </div>
     </header>
-    <main>
+    <section>
         <div class="container">
             <div id="carousel-exemplo" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner mb-4">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="/imagens/sale.jpg" alt="Promoções">
+                        <img src="./imagens/sale.jpg" alt="Promoções">
                         <div class="carousel-caption">
                             <h2>Promoções</h2>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/imagens/products.jpg" alt="Produtos">
+                        <img src="./imagens/products.jpg" alt="Produtos">
                         <div class="carousel-caption">
                             <h2>Produtos</h2>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/imagens/cards.jpg" alt="Faça seu Cartão">
+                        <img src="./imagens/cards.jpg" alt="Faça seu Cartão">
                         <div class="carousel-caption">
                             <h2>Faça seu Cartão</h2>
                         </div>
@@ -77,22 +77,22 @@
                 </ol>
             </div>
         </div>
-    </main>
+    </section>
     <section id="cards">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 mb-4 d-flex flex-column justify-content-between">
                     <article class="card text-bg-dark">
                         <img
                             src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
                         <div class="card-img-overlay">
                             <h4 class="card-title">Produtos</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.  </p>
                             <a href="#" class="btn btn-primary">Clique aqui</a>
                         </div>
                     </article>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 mb-4  d-flex flex-column justify-content-between">
                     <article class="card text-bg-dark">
                         <img
                             src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
@@ -103,24 +103,24 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 mb-4  d-flex flex-column justify-content-between">
                     <article class="card text-bg-dark">
                         <img
                             src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
                         <div class="card-img-overlay">
                             <h4 class="card-title">Cartão</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.  </p>
                             <a href="#" class="btn btn-primary">Clique aqui</a>
                         </div>
                     </article>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 mb-4  d-flex flex-column justify-content-between">
                     <article class="card text-bg-dark">
                         <img
                             src="https://images.pexels.com/photos/730547/pexels-photo-730547.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
                         <div class="card-img-overlay">
                             <h4 class="card-title">Projetos</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.  </p>
                             <a href="#" class="btn btn-primary">Clique aqui</a>
                         </div>
                     </article>
@@ -145,33 +145,67 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="aba1">
                         Conteúdo da aba Eletrônicos
+                        <ul class="conteudo-aba1 mt-3">
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>                     
+                        </ul>
                     </div>
                     <div class="tab-pane" id="aba2">
                         Conteúdo da aba Moda Masculina
+                        <ul class="conteudo-aba2 mt-3">
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>                     
+                        </ul>
                     </div>
                     <div class="tab-pane" id="aba3">
                         Conteúdo da aba Moda Feminina
+                        <ul class="conteudo-aba3 mt-3">
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>
+                            <li class="d-flex">
+                                <img class="me-4 mb-3" src="//via.placeholder.com/120x120" alt=""/>
+                                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, vel tempora aliquid incidunt at aut harum soluta non molestias cupiditate accusantium natus, error nobis laborum quia. Quam vel ipsa cupiditate?</p>
+                            </li>                     
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="promocoes">
-        <div class="container">
-        <h2>Promoções</h2>
-        </div>        
-    </section>
-    <section id="cartao">
-        <div class="container">
-        <h2>Cartão</h2>
+    
+    <footer class="custom-bg text-light p-3 text-center">
+        <div class="container ">
+            <div class="row">
+                <p>&copy; Alamir Rangel | Todos direitos reservados</p>
+            </div>
         </div>
-    </section>
-    <section id="projetos">
-        <div class="container">
-            <h2>Projetos</h2>
-        </div>
-    </section>
-
+    </footer> 
     <script src="lib/bootstrap.bundle.min.js"></script>
 </body>
 
